# FoodSharingDissertation

./: .gitmodules  CMakeLists.txt  README.md
db/: test.db3
public/: index.html  main.css  main.js  script.js
public/components/: add-button.js  model.js  page-indicator.js  post-card.js  search-post.js  swipe-detection.js
public/components/cards/: category-card.js  collection-item-card.js  post-card.js
public/components/footer-bar/: add-button.js
public/components/header-bar/: back-button.js  header-bar.js  page-title.js  search-bar.js
public/components/modals/: barcode-modal.js  collection-modal.js  modal.js
public/components/wizard/: image-picker.js  item-quality-form.js  wizard-button.js
public/pages/: assistant-listings.js  create-post-wizard.js  food-listings.js  inventories.js  meal-preparing.js  post-details.js
public/pages/collection-managment/: collection-details.js  collections.js  create-item-form.js  create-manual-item.js
public/pages/create-posting/: create-post-manual.js  create-post-wizard.js  post-details.js
public/pages/listings/: assistant-listings.js  food-listings.js  listing-page.js
public/scripts/: barcode-item-handler.js  create-collection-item.js  create_collection.js  create_listing.js  current_user.js  dom.js  main.js  query_collection.js  query_listings.js  router.js
public/styles/: base.css  bottom-bar.css  button.css  category-card.css  collection-details.css  collections.css  create-post.css  layout.css  main.css  model.css  page-indicator.css  post-card.css  post-details.css  top-bar.css  wizard.css
src/: collection.hpp  item.hpp  listing.hpp  main.cpp  quality.hpp  user.hpp
src/models/: assistant_listing.hpp  collection.hpp  food_listing.hpp  item.hpp  listing.hpp  quality.hpp  user.hpp
src/repos/: collection_repo.hpp  item_repo.hpp  listing_repo.hpp  quality_repo.hpp  user_repo.hpp
src/routes/: collection_routes.hpp  item_routes.hpp  listing_routes.hpp
tests/: collection.test.cpp  listing.test.cpp
